<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.note.note.presentation.content.write.util.WriteMode"/>
        <variable
            name="model"
            type="com.note.note.presentation.content.write.NoteWriteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:menu="@menu/menu_note_write"
            app:title="@{model.state.writeMode == WriteMode.CREATE ? @string/create : @string/edit}"
            app:titleTextAppearance="@style/BoldTextView" />

        <!--Main content-->

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/layout_add_item_controller"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.note.core.ui.widget.AdaptiveEditText
                    android:id="@+id/et_content"
                    style="@style/RegularTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_extra"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/content_hint"
                    android:inputType="textMultiLine"
                    android:text="@={model.contentText}"
                    android:minLines="5"
                    app:baseTextSizeAsPx="@integer/size_16pt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--Added image layout-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_added_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/spacing_large"
                    android:visibility="@{model.state.images.empty ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_content"
                    tools:visibility="visible">

                    <com.note.core.ui.widget.AdaptiveTextView
                        android:id="@+id/tv_image_title"
                        style="@style/BoldTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:text="@string/title_image"
                        app:baseTextSizeAsPx="@integer/size_14pt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mid"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/spacing_large"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_image_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--Added reference link layout-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_added_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/spacing_large"
                    android:visibility="@{model.state.links.empty ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout_added_image"
                    tools:visibility="visible">

                    <com.note.core.ui.widget.AdaptiveTextView
                        android:id="@+id/tv_link_title"
                        style="@style/BoldTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_large"
                        android:text="@string/title_link"
                        app:baseTextSizeAsPx="@integer/size_14pt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_mid"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingHorizontal="@dimen/spacing_large"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_link_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


        <!--Bottom Controller-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_add_item_controller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:dividerColor="@color/default_text_sub"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_mid"
                android:src="@drawable/ic_add_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_add_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_mid"
                android:src="@drawable/ic_add_link"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_add_image"
                app:layout_constraintTop_toTopOf="parent" />

            <com.note.core.ui.widget.AdaptiveTextView
                android:id="@+id/tv_branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_large"
                style="@style/MediumTextView"
                android:paddingStart="4dp"
                android:text="@{@string/branch_format(model.state.content.branchName)}"
                app:baseTextSizeAsPx="@integer/size_14pt"
                android:textColor="@color/default_text_sub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Branch: Work-1" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_branch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_branch"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
